tests/fixtures/valid/funcion_simple.syn
#lang: es

funcion suma(a: int, b: int) -> int:
    retornar a + b
