tests/fixtures/invalid/token_inesperado.syn
#lang: es

funcion f() -> nulo:
    retornar @
